# EVY

./: .dockerignore  .gitignore  BIGEVY_LILEVY_SYNC_SYSTEM.md  DEPLOYMENT_SUMMARY.md  Dockerfile  Dockerfile.prehardware  ENHANCED_LILEVY_PROTOTYPE_SUMMARY.md  EVY_Cost_Analysis.md  EVY_MESH_NETWORKING_PROTOCOLS.md  EVY_Technical_Architecture.md  EVY_Todo_List.md  EXPANDED_KNOWLEDGE_OPPORTUNITIES.md  LORA_INTEGRATION_IMPLEMENTATION_PLAN.md  OFFLINE_RAG_PRIORITIES.md  PHASE_11_EXPANSION_PROGRESS.md  PHASE_13_EXPANSION_PROGRESS.md  PUBLIC_APIS_INTEGRATION.md  RAG_LOCAL_DATA_INTEGRATION.md  README.md  deploy-bigevy.sh  deploy-enhanced-lilevy.sh  deploy-hybrid.sh  deploy-lilevy.sh  docker-compose.bigevy.yml  docker-compose.enhanced-lilevy.yml  docker-compose.hybrid.yml  docker-compose.lilevy.yml  docker-compose.observability.yml  docker-compose.prehardware.yml  docker-compose.yml  env.template  env.wichita  start-local.sh  start.bat  start.sh  test-system.py
backend/: Dockerfile.bigevy  Dockerfile.enhanced-lilevy  Dockerfile.hybrid  Dockerfile.lilevy  __init__.py  requirements-prehardware.txt  requirements.txt  run_tests.py
backend/rust_services/compression/: Cargo.toml  README.md  build.sh
backend/rust_services/compression/src/: cache.rs  config.rs  engine.rs  error.rs  lib.rs  python.rs  resource_monitor.rs  rule_compressor.rs
backend/rust_services/compression/tests/: integration_test.rs
backend/rust_services/message_router/: Cargo.toml  README.md  build.sh
backend/rust_services/message_router/src/: config.rs  error.rs  intent_classifier.rs  lib.rs  python.rs  resource_monitor.rs  router.rs  service_registry.rs
backend/rust_services/message_router/tests/: integration_test.rs
backend/rust_services/sms_gateway/: Cargo.toml  IMPLEMENTATION_STATUS.md  README.md  build.sh
backend/rust_services/sms_gateway/src/: config.rs  error.rs  gateway.rs  gsm_driver.rs  lib.rs  message_queue.rs  python.rs
backend/rust_services/sms_gateway/tests/: integration_test.rs
config/: offline_knowledge_config.py
docs/: API_DOCUMENTATION.md  BIGEVY_ARCHITECTURE_REVIEW.md  BITNET_LOCAL_LLM.md  CODEBASE_ANALYSIS_AND_GAPS.md  DEPLOYMENT_RUNBOOK.md  DEVELOPMENT_SETUP.md  EDGE_DATABASE.md  EDGE_LOAD_PROFILE.md  EDGE_MODEL_MANAGEMENT.md  EDGE_MODEL_MANAGEMENT_IMPLEMENTATION.md  EMERGENCY_RESPONSE.md  EMERGENCY_RESPONSE_IMPLEMENTATION.md  ENHANCEMENTS_REVIEW.md  EVY_Architecture_Guide.md  EVY_COMPETITIVE_LANDSCAPE.md  EVY_COMPREHENSIVE_GAP_ANALYSIS.md  EVY_COMPRESSION_INTEGRATION.md  EVY_EDGE_IMPLEMENTATION_PLAN.md  EVY_ENHANCEMENTS_PLAN.md  EVY_Gap_Analysis_March2026.docx  EVY_Gap_Analysis_March2026.md  EVY_Hardware_Mapping_March2026.md  EVY_LOW_FREQUENCY_RADIO_INTEGRATION.md  EVY_MASTER_IMPLEMENTATION_PLAN.md  EVY_MINIMUM_READER_GUIDE.md  EVY_PIVOT_STRATEGY.md  EVY_PRE_HARDWARE_BACKLOG.md  EVY_RUST_REFACTOR_ANALYSIS.md  EVY_Roadmap.md  EVY_Specification_Script.md  EVY_UNIFIED_IMPLEMENTATION_PLAN.md  FIRST_HARDWARE_BRINGUP_RUNBOOK.md  FREE_APIS_QUICK_START.md  HARDWARE_PURCHASE_BOM.md  HARDWARE_VALIDATION_CHECKLIST.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_PROGRESS_SUMMARY.md  (+35 more)
(+145 files in other folders)
