[package]
name = "evy-sms-gateway"
version = "0.1.0"
edition = "2021"

[lib]
name = "evy_sms_gateway"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Serial communication
serialport = "4.3"
tokio = { version = "1.35", features = ["full"] }
tokio-serial = "5.4"

# Async runtime
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = "0.4"

# Memory-efficient collections
smallvec = "1.11"

# PyO3 for Python bindings
pyo3 = { version = "0.20", features = ["auto-initialize", "extension-module"] }

# Power monitoring (if available)
# sysinfo = "0.30"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"

